Lecture 2, tutorials alpha

--- a/01.intro_wason.md
+++ b/01.intro_wason.md
@@ -17,7 +17,7 @@ kernelspec:
 - Mathematics relies on rules of logic
 - Yet, for human brain applying mathematical logic may be difficult, and dependent on the domain
 
-```{image} _static/img/wason.png
+```{image} _static/img/lecture_01/wason.png
    :width: 60%
 ```
 
