--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -23,7 +23,7 @@ kernelspec:
 ```
 {cite:ps}`sydsaeter2016`
 
-Chapters 1.1, 2.1, and 5.5 (pp. 1–12, 19–22, and 160–163).
+Chapters 1.1, 2.1-2.5, and 5.5 (pp. 1–12, 19–42, and 160–163).
 <div style="clear: both"></div>
 
 Additional reading (introductory level):
@@ -43,7 +43,14 @@ Additional reading (more advanced level):
 
 ## Sets and elements
 
-A **set** ($X$) is a collection of objects. A particular object within a set ($x$) is known as an **element** of that set. The idea that x is an element of X is written in mathematical notation as $x \in X$.
+```{admonition} Definition
+:class: caution
+
+A **set** ($X$) is a collection of objects.  
+A particular object within a set ($x$) is known as an **element** of that set. 
+```
+
+The idea that x is an element of X is written in mathematical notation as $x \in X$.
 
 Suppose that there are elements that do not belong to $X$. Let $y$ be one such element. The idea that $y$ is not an element of $X$ is written in mathematical
 notation as $y \notin X$ . 
@@ -51,11 +58,12 @@ notation as $y \notin X$ .
 A set that does not contain any elements is said to be empty. An **empty set** is denoted by either $\varnothing$ or $\{\}$.
 
 There are two fundamental ways of defining a particular set:
-- The first of these is to exhaustively list all of the elements of the set.
+1. The first of these is to exhaustively list all of the elements of the set.
     - Example 1: $X = \{1, 2, 3\}$
     - Example 2: $Y = \{1, 2, 3, · · · , 100\}$
     - Example 3: $\mathbb{N} = \{1, 2, 3, · · · \}$
-- The second of these is to specify one or more properties that characterise all of the elements in the set.
+
+2. The second of these is to specify one or more properties that characterise all of the elements in the set.
     - Example 4: $X = \{n \in \mathbb{N} : n < 4\}$
     - Example 5: $Y = \{n \in \mathbb{N} : n \leqslant 100\}$
 
@@ -63,7 +71,7 @@ There are two fundamental ways of defining a particular set:
 
 It would be nice if we could always associate some type of set with any particular property that we might consider. In other words, it would be nice if for any property $\mathbb{A}$, we could form a set $\{x \in X : \mathbb{A}(x) \text{ is true}\}$ that consisted of all of the elements that satisfy this property. Unfortunately, this is not the case.
 
-This was established by Bertrand Russell. He did this by developing the following paradox. 
+This was established by British philosopher and mathematician Bertrand Russell and published in 1901. He did this by developing the following paradox. 
 
 Let $\mathbb{A}$ be the property “is a set and does not belong to itself”. Suppose that $A$ is the set of all sets that possess property $\mathbb{A}$. Is $A \in A$?
 
@@ -73,41 +81,101 @@ We have a paradox. It cannot be the case that both $A \in A$ and $A \notin A$.
 
 One possible resolution to Russell’s paradox is to not allow mathematical objects like this particular $A$ to be considered a set.
 
+Resolution to Russell's is axiomatic re-definition  of the set theory by Ernst Zermelo, Abraham Fraenkel and Thoralf Skolem in 1908-1920, known today as ZFC axiomatic set theory.
+
 ### Some common number sets
-- The set of natural numbers: $\mathbb{N} = \{1, 2, 3, · · · \}$
-- The set of non-negative intergers: $\mathbb{Z}_+ = \{0, 1, 2, · · · \}$
-- The set of integers: $\mathbb{Z} = \{· · · , −2, −1, 0, 1, 2, · · · \}$
-- The set of rational numbers: $\mathbb{Q} = \{ \frac{m}{n} : m \in \mathbb{Z}, n \in \mathbb{N}\}$;
-    - The set of non-negative rational numbers: $Q_+ = \{x \in \mathbb{Q} : x \geqslant 0\}$
-    - The set of positive rational numbers: $Q_{++} = \{x \in \mathbb{Q} : x > 0\}$;
-- The set of real numbers: $\mathbb{R} = (−∞, ∞)$
-    - The set of non-negative real numbers: $\mathbb{R}_+ = \{x \in \mathbb{R} : x \geqslant 0\}$
-    - The set of positive real numbers: $\mathbb{R}_{++} = \{x \in \mathbb{R}: x > 0\}$
+
+- The set of natural numbers: 
+```{math}
+\mathbb{N} = \{1, 2, 3, · · · \}
+```
+- The set of non-negative intergers: 
+```{math}
+\mathbb{Z}_+ = \{0, 1, 2, · · · \}
+```
+- The set of integers:
+```{math}
+\mathbb{Z} = \{· · · , −2, −1, 0, 1, 2, · · · \}
+```
+- The set of rational numbers:
+```{math}
+\mathbb{Q} = \{ \frac{m}{n} : m \in \mathbb{Z}, n \in \mathbb{N}\}
+```
+- The set of non-negative rational numbers:
+```{math}
+\mathbb{Q}_+ = \{x \in \mathbb{Q} : x \geqslant 0\}
+```
+- The set of positive rational numbers:
+```{math}
+\mathbb{Q}_{++} = \{x \in \mathbb{Q} : x > 0\}
+```
+- The set of real numbers:
+```{math}
+\mathbb{R} = (-\infty, \infty)
+```
+- The set of non-negative real numbers:
+```{math}
+\mathbb{R}_+ = \{x \in \mathbb{R} : x \geqslant 0\}
+```
+- The set of positive real numbers:
+```{math}
+\mathbb{R}_{++} = \{x \in \mathbb{R}: x > 0\}
+```
 - The set of complex numbers:
 ```{math}
 \mathbb{C} = \{ a + bi : a \in \mathbb{R}, \: b \in \mathbb{R}, \: i = \sqrt{−1} \}
 ```
 
+```{admonition} Example
+:class: tip
+
+:::{math}
+\begin{array}{ccc}
+1 \in \mathbb{N} &
+0 \in \mathbb{Z}_+ &
+-1 \in \mathbb{Z} \\
+\frac{1}{2} \in \mathbb{Q} &
+\sqrt{2} \in \mathbb{R} &
+\sqrt{2} \in \mathbb{R}_{++}
+\end{array}
+:::
+```
+
+
 ### Subsets
+
+```{admonition} Definition
+:class: caution
+
 Consider two sets, $X$ and $Y$.
+Suppose that every element of $X$ also belongs to $Y$. If this is the case, then we say that $X$ is a **subset** of $Y$. 
+```
 
-Suppose that every element of $X$ also belongs to $Y$. If this is the case, then we say that $X$ is a **subset** of $Y$. This is written in mathematical notation as $X \subseteq Y$.
+This is written in mathematical notation as $X \subseteq Y$.
 
-Suppose that in addition to every element of $X$ also belonging to $Y$, there is at least one element of Y that does not belong to $X$. If this is the case, then we say that $X$ is a **proper subset** of $Y$. This is written is mathematical notation as $X \subset Y$.
+```{admonition} Definition
+:class: caution
+
+Suppose that in addition to every element of $X$ also belonging to $Y$, there is at least one element of Y that does not belong to $X$. If this is the case, then we say that $X$ is a **proper subset** of $Y$.
+```
+
+This is written is mathematical notation as $X \subset Y$.
 
 Sometimes $X \subset Y$ is used (rather loosely) to mean $X \subseteq Y$. If this meaning of the notation is employed, then $X \subsetneq Y$ would need to be used to indicate that $X$ is a proper subset of $Y$.
 
 Suppose that both every element of $X$ also belongs to $Y$, and every element of $Y$ also belongs to $X$. If this is the case, then we say that $X$ is equal to $Y$. This is written in mathematical notation as $X = Y$.
 
-```{note}
-Recall the common number sets from above. The following “nesting” relationship exists between these common sets of numbers:
+### The nesting of number sets
 
-$$
+```{admonition} Example
+:class: tip
+
+Recall the common number sets from above. The following “nesting” relationship exists between these common sets of numbers:
+:::{math}
 \mathbb{N} \subset \mathbb{Z}_+ \subset \mathbb{Z} \subset \mathbb{Q} \subset \mathbb{R} \subset \mathbb{C}
-$$
+:::
 ```
 
-### The nesting of number sets
 Note that $\mathbb{N} \subset \mathbb{Z}_+$ because $\mathbb{Z}_+ = \mathbb{N} \cup \{0\}$.
 
 Note that $\mathbb{Z}_+ \subset \mathbb{Z}$ because $\mathbb{Z} = \mathbb{Z}_+ \cup \{ · · · , −3, −2, −1 \}$.
@@ -126,12 +194,21 @@ and $0 \in \mathbb{R}$, but $(a + bi) \notin \mathbb{R}$ if $b \neq 0$.
 - Complex numbers in which a = 0 are known as (purely) “imaginary numbers”.
 
 ### Intervals as subsets of the real line
-Some (but not all) of the subsets of the real line take the form of an
-interval. There are four types of interval. Let $a \in \mathbb{R}, b \in \mathbb{R} \text{ and } a < b$. The four types of interval are as follows:
-- $[a, b] = {x \in \mathbb{R} : a \leqslant x \leqslant b}$. (If $a > b$, then $[a, b] = \varnothing$.) (If $a = b$, then $[a, b] = \{a\} = \{b\}$.) 
-- $(a, b) = {x \in \mathbb{R} : a < x < b}$. (If $a > b$, then $[a, b] = \varnothing$.)
-- $[a, b) = {x \in \mathbb{R} : a \leqslant x < b}$. (If $a > b$, then $[a, b] = \varnothing$.)
-- $(a, b] = {x \in \mathbb{R} : a < x \leqslant b}$. (If $a > b$, then $[a, b] = \varnothing$.)
+
+Some (but not all) of the subsets of the real line take the form of an interval. 
+
+Let $a \in \mathbb{R}, b \in \mathbb{R} \text{ and } a < b$.
+There are four types of intervals: 
+
+- $[a, b] = {x \in \mathbb{R} : a \leqslant x \leqslant b}$  
+    - If $a > b$, then $[a, b] = \varnothing$
+    - If $a = b$, then $[a, b] = \{a\} = \{b\}$
+- $(a, b) = {x \in \mathbb{R} : a < x < b}$
+    - If $a > b$, then $[a, b] = \varnothing$
+- $[a, b) = {x \in \mathbb{R} : a \leqslant x < b}$
+    - If $a > b$, then $[a, b] = \varnothing$
+- $(a, b] = {x \in \mathbb{R} : a < x \leqslant b}$
+    - If $a > b$, then $[a, b] = \varnothing$
 
 ## The real number system
 The system of real numbers is an algebraic structure known as a **complete ordered field**. Indeed, in a sense, it is the only complete ordered field in existence. Any other complete ordered field turns out to be “isomoporhic” to the real number system. (The term “isomorphic” is a mathematical version of “essentially the same”).
@@ -146,6 +223,33 @@ Why aren’t the rational numbers enough? What makes us think that they contain 
 A geometric argument for the existence of irrational numbers is perhaps the easiest way to convince yourself of their existence. Think about a right-angled triangle with a base (horizontal side) that is one metre long and whose (perpendicular) height (which is also its vertical side) is also one metre long. We know from Pythagoras’ Theorem that the length of the hypotenuse for this triangle is “the
 square root of two” metres long. But it can be shown that $\sqrt{2}$ is an irrational number!
 
+
+````{admonition} Proposition
+
+$\sqrt{2}$ is not a rational number.
+````
+
+````{admonition} Proof
+:class: dropdown
+
+We can prove this proposition by contradiction.
+1. Assume that $\sqrt{2} = \frac{p}{q}$ where $p$ ad $q$ are whole numbers.
+2. Without loss of generality we can choose $p$ and $q$ such that they do not have common factors, otherwise these factors can be cancelled out.
+3. Then $\frac{p^2}{q^2} = 2$, and so $2q^2 = p^2 \iff p^2$ is a multiple of 2.
+4. All components in [prime decomposition](https://en.wikipedia.org/wiki/Integer_factorization) of $p^2$ enter in pairs because it is a square, therefore there must be an even number of 2's in the factorization of $p^2$
+$\implies$ $p$ is a multiple of 2 itself.
+5. Therefore we can find a whole number $r$ such that $p = 2r$, and substitute to get $2q^2 = 4r^2 \implies q^2 = 2r^2$.
+6. Now the same arguments applied to $q$ let us conclude that $q$ is also a multiple of 2.
+7. This contradicts our choice of $p$ and $q$ not having common factors! 
+8. Therefore our assumption that $\sqrt{2} = \frac{p}{q}$ is false, and thus $\sqrt{2}$ is indeed an irrational number.
+$\blacksquare$
+
+```{note}
+The symbol $\blacksquare$ marks the end of the proof, and is equivalent to the QED symbol ("[*quod erat demonstrandum*](https://en.wikipedia.org/wiki/Q.E.D.)", or "*that which was to be demonstrated*").
+```
+````
+
+
 ### Algebraic rules for the real number system
 Consider any three real numbers: $a \in \mathbb{R}$, $b \in \mathbb{R}$, and $c \in \mathbb{R}$. Let $0 \in \mathbb{R}$ be the additive identity element and $1 \in \mathbb{R}$ be the multiplicative identity element. The real numbers obey the following algebraic rules:
 - Commutative Law for Addition: $(a + b) = (b + a)$.
@@ -156,8 +260,7 @@ Consider any three real numbers: $a \in \mathbb{R}$, $b \in \mathbb{R}$, and $c 
 - Associative Law for Multiplication: $a \times (b \times c) = (a \times b) \times c$.
 - Existence of the Multiplicative Identity ($1$): $a \times 1 = a$.
 - Existence of a Multiplicative Inverse ($a^{−1}$): $a \times a^{−1} = 1$ for all $a \ne 0$.
-- Left Distributive Law: $a \times (b + c) = a \times b + a \times c$.
-- Right Distributive Law: $(a + b) \times c = a \times c + b \times c$.
+- Distributive Law: $a \times (b + c) = a \times b + a \times c$.
 
 The real numbers also possess the Archimedean property. This simply says that for any $x \in \mathbb{R}$, there exists some $n \in \mathbb{N}$ such that $x < n$.
 
@@ -173,126 +276,205 @@ The real numbers also obey the following algebraic rules.
     - $a \geqslant b \iff (−a) \leqslant (−b)$.
 - Order Reversal for Multiplicative Inverses (Fractions).
     - Assume that both $a \ne 0$ and $b \ne 0$ in the following two statements.
-    - $a \leqslant b \iff a^{−1} > b^{−1}$ (that is, $\frac{1}{a} \geqslant \frac{1}{b}$ ).
+    - $a \leqslant b \iff a^{−1} \leqslant b^{−1}$ (that is, $\frac{1}{a} \geqslant \frac{1}{b}$ ).
     - $a < b \iff a^{−1} > b^{−1}$ (that is, $\frac{1}{a} > \frac{1}{b}$).
-    
+
+```{note}
+Division by zero in *not* defined for any real number $p$.
+```
+
+```{admonition} Example
+:class: tip
+
+All algebra and arithmetic problems you've seen in highschool.
+```
+
+```{admonition} Example
+:class: tip
+
+:::{math}
+\begin{array}{ccc}
+32^{\frac{3}{5}} &
+\frac{8}{27}^{\frac{2}{3}} &
+-9^{\frac{3}{2}}
+\end{array}
+:::
+```
+
+```{note}
+
+When exponent is fractional and base is negative, the result is undefined for non-integer exponents.  
+See discussion [here](https://math.stackexchange.com/questions/317528/how-do-you-compute-negative-numbers-to-fractional-powers)
+```
+
+
+
 ## More on sets
 
 ### Power sets
-The **power set** ($2^X$) of a set ($X$) is the set of all subsets of that set. Note that the elements of a power set are sets themselves.
+
+```{admonition} Definition
+:class: caution
+
+The **power set** $2^X$ of a set $X$ is the *set of all subsets* of $X$.
+```
+
+Note that the elements of a power set are sets themselves.
 
 If there are $n < \infty$ elements (that is, a finite number of elements) in the set $X$, then the number of subsets of $X$ will be equal to $2^n$. As such, there will be $2^n$ elements in the set $2^X$. This might be the reason that the power set for some set $X$ is often denoted by $2^X$.
 
-Example: Suppose that $X = \{1, 2, 3\}$. The power set for the set $X$ in this example is
-```{math}
-2^X = \{\varnothing, \{1\} , \{2\} , \{3\} , \{1, 2\} , \{1, 3\} , \{2, 3\} , \{1, 2, 3\}\}
+```{admonition} Example
+:class: tip
+
+Suppose that $X = \{1, 2, 3\}$. The power set for the set $X$ in this example is
+:::{math}
+2^X = \big\{\varnothing, \{1\} , \{2\} , \{3\} , \{1, 2\} , \{1, 3\} , \{2, 3\} , \{1, 2, 3\}\big\}
+:::
+
 ```
-Note that there are three elements in the set $X$ and eight elements in the power set for $X$. Note also that $2^3 = 8$.
+Note that there are three elements in the set $X$ and eight elements in the power set for $X$, $2^3 = 8$.
 
 ### Cartesian products
+
+```{admonition} Definition
+:class: caution
+
 The **Cartesian product** of *two* sets is defined to be the set of all ordered *pairs* (or doublets) that contain one component from each of the two sets in the order that the sets were specified. This can be formally expressed as
-```{math}
+:::{math}
 X \times Y = \{(x, y) : x \in X , \: y \in Y \}
+:::
 ```
+
+```{admonition} Definition
+:class: caution
 
 The Cartesian product of $n$ sets is defined to be the set of all ordered $n$-tuples that contain one component from each of the $n$ sets in the order that the sets were specified. This can be formally expressed as
-```{math}
+:::{math}
 \times_{i \in \{1,2,··· ,n\}} X_i = \{(x_1, x_2, · · · , x_n) : x_i \in X_i \; \forall i \in \{1, 2, · · · , n\}\}
+:::
+
 ```
+
 Note that the order of the sets matters here. Cartesian products generate sets of “ordered” n-tuples.
 
-#### Examples
-- The standard two-dimensional Euclidean coordinate plane from high school:
-```{math}
+
+```{admonition} Example
+:class: tip
+
+The standard two-dimensional Euclidean coordinate plane from high school:
+:::{math}
 \mathbb{R}^2 = \mathbb{R} \times \mathbb{R} = \{(x, y) : x \in \mathbb{R}, \; y \in \mathbb{R}\}
+:::
 ```
 
-- The $n$-dimensional Euclidean coordinate plane:
-```{math}
+```{admonition} Example
+:class: tip
+
+The $n$-dimensional Euclidean coordinate plane:
+:::{math}
 \mathbb{R}^n = \times_{i \in \{1,2,··· ,n\}} \mathbb{R} = \{(x_1, x_2, · · · , x_n) : x_i \in \mathbb{R} \; \forall i \in \{1, 2, · · · , n\}\}
+:::
+
 ```
 
-- A discrete-continuous example:
-```{math}
+```{admonition} Example
+:class: tip
+
+A discrete-continuous example:
+:::{math}
 \mathbb{N} \times \mathbb{R} = \{(n, y) : n \in \mathbb{N}, \; y \in \mathbb{R}\}
-```
+:::
 
-- A continuous-discrete example:
-```{math}
+A continuous-discrete example:
+:::{math}
 \mathbb{R} \times \mathbb{N} = \{(x, n) : x \in \mathbb{R}, \; n \in \mathbb{N}\}
+:::
+
 ```
 
-- If X = {1, 2, 3}, then the Cartesian product of X with itself is given by
-```{math}
+```{admonition} Example
+:class: tip
+
+If X = {1, 2, 3}, then the Cartesian product of X with itself is given by
+:::{math}
 X^2 = X \times X = \{(x, y) : x \in X , \; y \in X \}
-```
+:::
 
 - This set can also be written out as an exhaustive list of possible cases as follows:
-```{math}
+:::{math}
 X^2 = \{(1, 1) , (1, 2) , (1, 3) , (2, 1), (2, 2) , (2, 3) , (3, 1) , (3, 2) , (3, 3)\}
+:::
+
 ```
 
 
 ### Non-negative and positive real orthants
 
 - The set of non-negative real numbers is given by
-```{math}
+:::{math}
 R_+ = \{x \in \mathbb{R} : x \geqslant 0\} = [0, \infty)
-```
+:::
 
 - The Euclidean $L$-dimensional non-negative orthant is
-```{math}
+:::{math}
 R^L_+ = \times_{I = 1}^L \mathbb{R}_+
-```
+:::
 
 - The set of positive real numbers is given by
-```{math}
+:::{math}
 R_{++} = \{x \in \mathbb{R} : x > 0\} = (0, \infty)
-```
+:::
 
 - The Euclidean $L$-dimensional positive orthant is
-```{math}
+:::{math}
 R^L_{++} = \times_{I = 1}^L \mathbb{R}_{++}
-```
+:::
 
 
 ### Non-positive and negative real orthants
 
 - The set of non-positive real numbers is given by
-```{math}
+:::{math}
 R_- = \{x \in \mathbb{R} : x \leqslant 0\} = (-\infty, 0]
-```
+:::
 
 - The Euclidean $L$-dimensional non-positive orthant is
-```{math}
+:::{math}
 R^L_- = \times_{I = 1}^L \mathbb{R}_-
-```
+:::
 
 - The set of negative real numbers is given by
-```{math}
+:::{math}
 R_{--} = \{x \in \mathbb{R} : x < 0\} = (-\infty, 0)
-```
+:::
 
 - The Euclidean $L$-dimensional negative orthant is
-```{math}
+:::{math}
 R^L_{--} = \times_{I = 1}^L \mathbb{R}_{--}
-```
+:::
 
 
 ## Distances in Euclidean spaces
+
 Suppose that $x, y \in \mathbb{R}^n$, where $n \in \mathbb{N}$. The coordinates of the two points will take the form $x = (x_1, x_2, · · · , x_n)$ and $y = (y_1, y_2, · · · , y_n)$.
 
+```{admonition} Definition
+:class: caution
+
 The Euclidean distance between these two points is given by the Euclidean distance metric:
-```{math}
-d (x, y) = \sqrt{\sum_{i = 1}^{n} (y_i - x_i)^2}
+:::{math}
+d (x, y) =  \sqrt{\sum_{i = 1}^{n} (y_i - x_i)^2} = \| y - x \|
+:::
+
 ```
 
 Note that when $n = 1$, so that $\mathbb{R}^n = \mathbb{R}$, we have
-```{math}
-d (x, y) = \sqrt{(y - x)^2} = \lvert(y - x)\rvert
-```
+:::{math}
+d (x, y) = \sqrt{(y - x)^2} = \lvert y - x \rvert
+:::
 
 ### Properties of distance metrics
+
 The Euclidean distance metric is just one example of many possible distance metrics on sets of the form $\mathbb{R}^n$ for some $n \in \mathbb{N}$. It is the metric that is most commonly used for these sets in economics (and, I suspect, a number of other disciplines). But it is not the only possible distance metric.
 
 All distance metrics must satisfy a number of properties to ensure that they are valid measures of distance. To be precise, any distance metric $d(x, y)$ on a set $S$ must satisfy each of the following properties.
@@ -301,11 +483,23 @@ All distance metrics must satisfy a number of properties to ensure that they are
 - (DM3: Symmetry): $d(x, y) = d(y , x)$ for all $x, y \in S$.
 - (DM4: The Triangle Inequality): $d (x, y ) \leqslant d (x, z) + d (z, y)$ for all $x, y, z \in S$.
 
+````{admonition} Example
+:class: tip
+
+```{image} _static/img/lecture_02/metric.png
+   :width: 80%
+```
+````
+
+
 
 ## Operations on sets
 
 ### Union and intersection
 Suppose that U is some universal set, $X \subseteq U$ and $Y \subseteq U$. 
+
+```{admonition} Definition
+:class: caution
 
 The **union** of $X$ and $Y$, which is denoted by $X \cup Y$, is the set 
 
@@ -313,7 +507,12 @@ $$
 X \cup Y = \{a \in U : a \in X \text{ or } a \in Y\}
 $$
 
+```
+
 Note that the “or” in this definition is not exclusive. If the element $a$ belongs to either $X$ only, or $Y$ only, or both $X$ and $Y$ , then $a \in X \cup Y$. 
+
+```{admonition} Definition
+:class: caution
 
 The **intersection** of $X$ and $Y$, which is denoted by $X \cap Y$, is the set
 
@@ -321,10 +520,19 @@ $$
 X \cap Y = \{a \in U : a \in X \text{ and } a \in Y\}
 $$
 
+```
+
+```{admonition} Definition
+:class: caution
+
 If $X \cap Y = \varnothing$, then the sets $X$ and $Y$ are said to be **disjoint**.
 
+```
+
 #### Venn diagram: union of two (overlapping) sets
-In this example, the red, brown and green areas are all part of $A \cup B$ (the union of set $A$ (the left circle) and set $B$ (the right circle).
+Relationships between sets can be visualized using **Venn diagrams**.
+
+In this example, the red, brown and green areas are all part of $A \cup B$: the union of set $A$ (the left circle) and set $B$ (the right circle).
 
 ```{code-cell} ipython3
 :tags: ["hide-input", "full-width"]
@@ -407,13 +615,19 @@ plt.show()
 
 
 
-#### Examples
+````{admonition} Example
+:class: tip
+
 ```{figure} _static/img/lecture_02/union_example.png
 :width: 80%
 :align: center
 
 Examples: union
 ```
+````
+
+````{admonition} Example
+:class: tip
 
 ```{figure} _static/img/lecture_02/intersection_example.png
 :width: 80%
@@ -421,19 +635,31 @@ Examples: union
 
 Examples: intersection
 ```
+````
 
 
 
 ### Exclusion and complementation
 Suppose that U is some universal set, $X \subseteq U$ and $Y \subseteq U$. 
 
+```{admonition} Definition
+:class: caution
+
 The **set difference** "X excluding Y", which is denoted by $X \setminus Y$, is the set 
-```{math}
+:::{math}
 X \setminus Y = \{a \in X : a \notin Y \}
+:::
+
 ```
 
+```{admonition} Definition
+:class: caution
+
 Set complementation is a special case of set exclusion. The **complement** of the set $X$, which is denoted by $X^C$ , is defined as $X^C = U \setminus X$.
-- Note that $X \cup X^C = U$ and $X \cap X^C = \varnothing$.
+
+```
+
+Note that $X \cup X^C = U$ and $X \cap X^C = \varnothing$.
 
 
 #### Venn diagram: set difference
@@ -528,15 +754,18 @@ plt.show()
 
 
 
-#### Examples
+````{admonition} Example
+:class: tip
+
 ```{figure} _static/img/lecture_02/exclusion_example.png
 :width: 80%
 :align: center
 
 Examples: exclusion/set difference
 ```
+````
 
-````{admonition} Example: Set complementation
+````{admonition} Example: Set complement
 :class: tip
 
 Suppose that the universal set is $U = {1, 2, 3}$. The power set for the set $U$ in this example is
@@ -557,15 +786,25 @@ The elements of this power set are the subsets of the universal set. The complem
 
 
 ### Symmetric difference
+
+```{admonition} Definition
+:class: caution
+
 The **symmetric difference** of $X$ and $Y$, which is denoted by $X \bigtriangleup Y$, is
 the set
-```{math}
+:::{math}
 X \bigtriangleup Y = (X \setminus Y) \cup (Y \setminus X)
+:::
 ```
 
 It is interesting to compare the operations of union and symmetric difference. They relate to alternative interpretions of the phrase “belongs to either $X$ or $Y$”.
 - The set $X \cup Y$ consists of all elements that are either in set $X$ only, or in set $Y$ only, or in both of these sets.
 - The set $X \bigtriangleup Y$ consists of all elements that are either in set $X$ only, or in set $Y$ only, but are not in both of these sets.
+
+```{note}
+
+**Exclusive or** is another name for the symmetric difference operation.
+```
 
 #### Venn diagram: symmetric difference
 Note that the areas in light red together comprise the symmetric difference.
@@ -601,54 +840,109 @@ plt.show()
 
 ```
 
+````{admonition} Example
+:class: tip
 
-
-#### Example
 ```{figure} _static/img/lecture_02/symmetric_difference_example.png
 :width: 80%
 :align: center
 
 Examples: symmetric difference
 ```
+````
 
 
 ## De Morgan's laws
-Simple version:
+
+```{admonition} De Morgan's law simple version
+:class: caution
 
 Suppose that $X$ is some set, $A \subseteq X$ and $B \subseteq X$. According to De Morgan’s laws, we have
-```{math} 
+:::{math} 
 X \setminus (A \cup B) = (X \setminus A) \cap (X \setminus B) 
-```
+:::
 and
-```{math} 
+:::{math} 
 X \setminus (A \cap B) = (X \setminus A) \cup (X \setminus B) 
+:::
 ```
 
-General version:
+```{admonition} De Morgan's law general version
+:class: caution
 
 Let $I$ be some index set. Note that while I is allowed to be finite, it does not have to be finite. Let $X$ be some set and suppose that $A_i \subseteq U$ for all $i \in I$. According to De Morgan’s laws, we have
-```{math} 
+:::{math} 
 X \setminus (\cup_{i \in I} A_i) = \cap_{i \in I} (X \setminus A_i) 
-```
+:::
 and
-```{math} 
+:::{math} 
 X \setminus (\cap_{i \in I} A_i) = \cup_{i \in I} (X \setminus A_i) 
+:::
+
 ```
 
-### Example
+```{admonition} Example
+:class: tip
+
 Let $X = \{1, 2, 3\}, A = \{1, 2\} \subset X$ and $B = \{2, 3\} \subset X$.  Note that $A \cup B = \{1, 2, 3\} = X$ and $A \cap B = \{2\}$. Note also that 
 - $X \setminus A = \{3\}, X \setminus B = \{1\}$,
 - $X \setminus (A \cup B) = X \setminus X = \varnothing$ and 
 - $X \setminus (A \cap B) = X \setminus \{2\} = \{1, 3\}$.
 
 We have
-```{math}
+:::{math}
 (X \setminus A) \cap (X \setminus B) = \{3\} \cap \{1\} = \varnothing = X \setminus (A \cup B)
-```
+:::
 and
-```{math}
+:::{math}
 (X \setminus A) \cup (X \setminus B) = \{3\} \cup \{1\} = \{1, 3\} = X \setminus (A \cap B)
+:::
 ```
+
+## Counting elements in sets
+
+```{admonition} Definition
+:class: caution
+
+The number of elements of finite set $X$ is called the **cardinality** of $X$, and is denoted by $\lvert X \rvert$.
+```
+
+Counting the number of a *union* or an *intersection* of two sets $A$ and $B$ applying common sense may be dangerous.
+
+```{admonition} Example
+:class: tip
+
+What is the number of elements of $A \cup B$, $|A \cup B|$?
+
+:::{math}
+| \{1,2,3,4 \} \cup \{5,6,7,8\} | = 8
+:::
+
+But!
+
+:::{math}
+| \{1,2,3,4 \} \cup \{3,4,5,6\} | = 6
+:::
+
+- It depends on whether $A$ and $B$ are disjoint or not!
+```
+
+```{admonition} General rule
+:class: caution
+
+:::{math}
+|A \cup B| = |A| + |B| - |A \cap B|
+:::
+```
+
+Therefore, $|A \cup B|  = |A| + |B|$ if and only if $A \cap B = \emptyset$
+
+```{note}
+
+Be careful when solving the problems involving cardinality!
+```
+
+
 
 
 ## Examples of sets in economics
@@ -682,7 +976,6 @@ B(p_1, p_2, · · · , p_L, e_1, e_2, · · · , e_L)
 
 These are examples of “lower contour sets” for expenditure by an individual.
 
-*Illustrate these sets on the whiteboard for the two commodity case.*
 
 
 ### Weak preference sets
@@ -705,7 +998,6 @@ U^+(k) =
 
 These are examples of “(weak) upper contour sets” for the utility level attained by an individual.
 
-*Illustrate these sets on the whiteboard for the two commodity case.*
 
 
 ### Indifference sets
@@ -728,7 +1020,6 @@ U^0(k) =
 
 These are examples of “level sets” for the utility level attained by an individual.
 
-*Illustrate these sets on the whiteboard for the two commodity case.*
 
 
 ### Input requirement sets
@@ -746,7 +1037,6 @@ y^+(k) =
 
 This is an example of a “(weak) upper contour set” for the output level attained by a producer.
 
-*Illustrate this set on the whiteboard for the two input case.*
 
 ### Isoquants
 Consider a single output, multiple input production technology that can be represented by a production function of the form
@@ -762,7 +1052,6 @@ y^0(k) =
 ```
 
 This is an example of a “level set” or the output level attained by a producer.
-*Illustrate this set on the whiteboard for the two input case.*
 
 
 ### Isocosts
@@ -778,7 +1067,6 @@ C^0(k) = \left\{(x_1, x_2, · · · , x_n) \in \mathbb{R}^n_+ :
 where $w_i$ is the per-unit price of input $i$.
 
 This is an example of a “level set” for the expenditure on inputs by a producer.
-*Illustrate this set on the whiteboard for the two input case.*
 
 ### Price simplex
 In some situations in economics, it is relative prices that matter, rather than the absolute level of each individual price. In such cases, some form of price normalisation can be employed. 
@@ -794,7 +1082,6 @@ If the numeraire basket consists of one unit of each of the $n$ final commoditie
 ```
 
 This set is known as a price “simplex”.
-
-*Illustrate this set on the whiteboard for both the two commodity case and the three commodity case.*
+the three commodity case.*
 
 
