Checkout from "publish" branch to get the newest version of the first lectures

--- a/01.intro_to_economics.md
+++ b/01.intro_to_economics.md
@@ -12,7 +12,7 @@ kernelspec:
   name: python3
 ---
 
-# An introduction to economics
+# 📖 Mathematical economics
 
 ```{dropdown} References
 
@@ -159,7 +159,7 @@ Most people are not hermits. In general, individuals interact with other individ
 
 The interactions that occur between individuals that are important for economics take many forms and occur in many places. They include interactions in output markets, input markets and various institutions. Some of these interactions can be illustrated in a stylised diagrammatic representation of an economy known as a “circular flow of economic activity” diagram. These “circular flow” diagrams can incorporate varying levels of detail. 
 
-The next four slides contain some examples for a closed economy. While not being a formal economic model itself, a sufficiently detailed circular flow diagram can provide a very useful guide to the construction of a formal general equilibrium economic model of an economy.
+The next are some examples for a closed economy. While not being a formal economic model itself, a sufficiently detailed circular flow diagram can provide a very useful guide to the construction of a formal general equilibrium economic model of an economy.
 
 ### Circular flow diagram examples
 
@@ -191,13 +191,13 @@ Circular flow example 3: households, firms and financial markets
 Circular flow example 4: households, firms, financial markets and government
 ```
 
-### The three main components of mathematical (micro-)economics
+### The three main components of mathematical economics
 Takashi Kunimoto (Unpublished lecture notes on mathematical economics, 18 May 2010, page 6) notes that, according to Rakesh Vohra (2005, Preface), the three core technical components that underlie much of economic theory are as follows.
 - Feasibility questions
 - Optimality questions
 - Equilibrium (fixed-point) questions
 
-This is consistent with the earlier discussion in these lecture slides. One of the main tasks of mathematical (micro-) economics is the provision of techniques to represent, analyse, and answer these three questions (and various other related questions).
+One of the main tasks of mathematical (micro-) economics is the provision of techniques to represent, analyse, and answer these three questions (and various other related questions).
 
 
 ### Optimisation in economics: motivational quotes
