--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -80,8 +80,7 @@ If $A \in A$, then it must be the case that $A$ possesses property $\mathbb{A}$.
 We have a paradox. It cannot be the case that both $A \in A$ and $A \notin A$. 
 
 One possible resolution to Russell’s paradox is to not allow mathematical objects like this particular $A$ to be considered a set.
-
-Resolution to Russell's is axiomatic re-definition  of the set theory by Ernst Zermelo, Abraham Fraenkel and Thoralf Skolem in 1908-1920, known today as ZFC axiomatic set theory.
+Re-definition  of the set theory by Ernst Zermelo, Abraham Fraenkel and Thoralf Skolem in 1908-1920, known today as ZFC axiomatic set theory.
 
 ### Some common number sets
 
@@ -200,15 +199,16 @@ Some (but not all) of the subsets of the real line take the form of an interval.
 Let $a \in \mathbb{R}, b \in \mathbb{R} \text{ and } a < b$.
 There are four types of intervals: 
 
-- $[a, b] = {x \in \mathbb{R} : a \leqslant x \leqslant b}$  
+- $[a, b] = \{x \in \mathbb{R} : a \leqslant x \leqslant b\}$  
     - If $a > b$, then $[a, b] = \varnothing$
-    - If $a = b$, then $[a, b] = \{a\} = \{b\}$
-- $(a, b) = {x \in \mathbb{R} : a < x < b}$
-    - If $a > b$, then $[a, b] = \varnothing$
-- $[a, b) = {x \in \mathbb{R} : a \leqslant x < b}$
-    - If $a > b$, then $[a, b] = \varnothing$
-- $(a, b] = {x \in \mathbb{R} : a < x \leqslant b}$
-    - If $a > b$, then $[a, b] = \varnothing$
+    - If $a = b$, then $[a, b] = \{a\} = \{b\\}$
+- $(a, b) = \{x \in \mathbb{R} : a < x < b\}$
+    - If $a > b$, then $(a, b) = \varnothing$
+    - If $a = b$, then $(a, b) = \varnothing$
+- $[a, b) = \{x \in \mathbb{R} : a \leqslant x < b\}$
+    - If $a > b$, then $[a, b) = \varnothing$
+- $(a, b] = \{x \in \mathbb{R} : a < x \leqslant b\}$
+    - If $a > b$, then $(a, b] = \varnothing$
 
 ## The real number system
 The system of real numbers is an algebraic structure known as a **complete ordered field**. Indeed, in a sense, it is the only complete ordered field in existence. Any other complete ordered field turns out to be “isomoporhic” to the real number system. (The term “isomorphic” is a mathematical version of “essentially the same”).
@@ -1084,4 +1084,8 @@ If the numeraire basket consists of one unit of each of the $n$ final commoditie
 This set is known as a price “simplex”.
 the three commodity case.*
 
+
+```{dropdown} Further reading and self-learning
+- **Veritasium** video on paradoxes of set theory and mathematical incompleteness [YouTube](https://youtu.be/HeQX2HjkcNo)
+```
 
