--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -201,7 +201,7 @@ There are four types of intervals:
 
 - $[a, b] = \{x \in \mathbb{R} : a \leqslant x \leqslant b\}$  
     - If $a > b$, then $[a, b] = \varnothing$
-    - If $a = b$, then $[a, b] = \{a\} = \{b\\}$
+    - If $a = b$, then $[a, b] = \{a\} = \{b\}$
 - $(a, b) = \{x \in \mathbb{R} : a < x < b\}$
     - If $a > b$, then $(a, b) = \varnothing$
     - If $a = b$, then $(a, b) = \varnothing$
