--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -465,13 +465,30 @@ The Euclidean distance between these two points is given by the Euclidean distan
 :::{math}
 d (x, y) =  \sqrt{\sum_{i = 1}^{n} (y_i - x_i)^2} = \| y - x \|
 :::
-
 ```
 
-Note that when $n = 1$, so that $\mathbb{R}^n = \mathbb{R}$, we have
+Notation $\| \bullet \|$ in the definition is just a way to denote a distance function (metric).
+
+```{admonition} Sigma notation
+:class: caution
+
+Sigma notation is used to quickly write sums of elements index by $i$
+
 :::{math}
-d (x, y) = \sqrt{(y - x)^2} = \lvert y - x \rvert
+\sum_{i=1}^n A_i = \sum_{i\in \{1,\dots,n\}} A_i = A_1 + A_2 + \dots + A_n
 :::
+
+Sigma notation can be used with other operations as well, for example $\prod_{i=1}^{n} A_i$ denotes a product, $\times_{i=1}^{n} A_i$ denotes a Cartesian product, $\cup_{i=1}^{n} A_i$ denotes a inion and  $\cap_{i=1}^{n} A_i$ denotes an intersection of $A_i,\;\forall i\in\{1,\dots,n\}$.
+```
+
+
+
+Note that in scalar case when $n = 1$, so that $\mathbb{R}^n = \mathbb{R}$, we have
+:::{math}
+x,y \in \mathbb{R} d (x, y) = \sqrt{(y - x)^2} = \lvert y - x \rvert
+:::
+and the distance becomes just the absolute value of the difference between the two points.
+
 
 ### Properties of distance metrics
 
@@ -768,7 +785,7 @@ Examples: exclusion/set difference
 ````{admonition} Example: Set complement
 :class: tip
 
-Suppose that the universal set is $U = {1, 2, 3}$. The power set for the set $U$ in this example is
+Suppose that the universal set is $U = \{1, 2, 3\}$. The power set for the set $U$ in this example is
 ```{math}
 2^U = \{\varnothing, \{1\} , \{2\} , \{3\} , \{1, 2\} , \{1, 3\} , \{2, 3\} , \{1, 2, 3\}\} .
 ```
