Hand written notes

--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -1101,6 +1101,21 @@ If the numeraire basket consists of one unit of each of the $n$ final commoditie
 This set is known as a price “simplex”.
 the three commodity case.*
 
+````{admonition} Hand written notes from the lecture
+:class: note
+
+```{image} _static/img/notes/27feb/1.png
+   :width: 75%
+```
+```{image} _static/img/notes/27feb/2.png
+   :width: 75%
+```
+```{image} _static/img/notes/27feb/3.png
+   :width: 75%
+```
+
+````
+
 
 ```{dropdown} Further reading and self-learning
 - **Veritasium** video on paradoxes of set theory and mathematical incompleteness [YouTube](https://youtu.be/HeQX2HjkcNo)
