Time to read measure in lecture notes

--- a/01.intro_to_economics.md
+++ b/01.intro_to_economics.md
@@ -14,6 +14,8 @@ kernelspec:
 
 # 📖 Mathematical economics
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 ```{dropdown} References
 
 - {cite:ps}`alchian1972`: Chapters 1, 2, 3, 4, and 20 (pp. 2–52 and 384–404).
