--- a/01.intro_wason.md
+++ b/01.intro_wason.md
@@ -14,6 +14,8 @@ kernelspec:
 
 # ☕️ Wason selection paradox
 
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
+
 - Mathematics relies on rules of logic
 - Yet, for human brain applying mathematical logic may be difficult, and dependent on the domain
 
