--- a/02.sets_numbers_coordinates_distances.md
+++ b/02.sets_numbers_coordinates_distances.md
@@ -10,8 +10,9 @@ kernelspec:
   name: python3
 ---
 
-
 # 📖 Sets, numbers, coordinates, and distances
+
+<small>⏱ <span class="eta"></span> | <span class="words"></span> words</small>
 
 ## Sources and reading guide
 
